syntax = "proto2";
package douyin.core;

option go_package = "pb_video/";

message douyin_publish_list_request {
  required int64 user_id = 1; // 用户id
  required string token = 2; // 用户鉴权token
}





